--- a/66-lisad.Rmd
+++ b/66-lisad.Rmd
@@ -260,4 +260,103 @@ summary(lm(sissetulek ~ numeracy + sugu, data = piaac))
 ```
 
 
+# Robust and clustered standard errors
+
+Regressioonimudeli jäägid peaksid hinnatud väärtuste lõikes olema homogeense ja konstantse variatiivsusega, st ühtlaselt jaotunud kõikide $\hat{y}$ väärtuste ümber (jääkide dispersiooni homogeensuse eeldus ehk *homoscedasticity*). Selle eelduse rikkumine mõjutab eelkõige standardvigu (need ei kehti enam kõikidele $\hat{y}$ väärtustele ühtlaselt) ja seeläbi loomulikult ka usaldusintervalle ning *p*-väärtusi. Lahenduseks võivad olla nn **robustsed standardvead** (*robust standard errors*), mis võtavad varieeruvuse erinevust arvesse.
+
+Vaatluse jäägid ei tohiks olla ka korreleeritud. Selline olukord võib tekkida näiteks siis, kui hindame näiteks õpilaste testiskoore lähtuvalt nende õppimisele kulunud ajast, kuid ei arvesta, et õpilased tulevad erinevatest koolidest, kus võib olla erinev õppetase jne. Seega õpilaste tulemused ei ole enam sõltumatud, vaid sõltuvad koolist. Regressioonikoefitsientide standardvigade arvutamisel lähtutakse aga eeldusest, et jäägid on sõltumatud. Kui jäägid on korreleeritud, siis võib juhtuda, et me alahindame standardvigade suurust ehk siis oleme oma tulemustes ülemäära kindlad (usaldusintervallid ning *p*-väärtused tulevad liialt väikesed) ning võime näha seoseid seal kus neid tegelikult ei ole. Lahenduseks saab olla mitmetasandiline mudel või **klasterdatud standardvead** (*clustered standard errors* või ka *cluster-robust standard errors*).
+
+Üheks võimaluseks standardvigu korrigeerida on kasutada paketti `sandwitch`, mis võimaldab olemasoleva mudeli variatsiooni-kovariatsiooni maatriksi põhjal arvutada nn robustne variatsiooni-kovariatsiooni maatriks. Sellest saame omakorda tuletada koefitsientide robustsed dispersioonid ning neist omakorda robustsed standardvead. `sandwich` paketis on erinevaid standardvigade korrigeerimise funktsioone: `vcovHC()` (*heteroskedasticity-consistent (HC) errors*), `vcovHAC()` (*heteroskedastiticy- and autocorrelation-consistent (HAC) errors*),  `vcovCL()` (*clustered errors*) jne, mida saab vastavalt vajadusele (millist korrektsiooni tahame) kasutada.
+
+Defineerime kõigepealt tavalise regressioonimudeli:
+
+```{r}
+
+piaac <- read_csv("https://github.com/mrksom/kvant/raw/master/data/piaac.csv")
+
+# Defineerime regressioonimudeli 
+mudel <- lm(numeracy ~ literacy * sugu, 
+             data = piaac)
+
+# tidy() funktsiooniga saame kätte tavalised standardvead ja usalduspiirid
+broom::tidy(mudel, conf.int = T)
+
+```
+
+## Robust standard errors
+
+Robustsete standardvigade jaoks tuleb meil arvutada uus 'robustne' koefitsientide variatsiooni-kovariatsiooni maatriks ehk nn *Heteroscedasticity-Consistent Covariance Matrix*. Saame kasutada `sandwitch` paketti ja selle funktsiooni `vcovHC()`.
+
+Variatsiooni-kovariatsiooni maatriksi diagonaalis on koefitsientide dispersioonid (variance). Ruutjuur dispersioonist annab koefitsiendi standardhälbe, mis on ongi parameetri standardviga. Seega saame robustsed standardvead kätte nii:
+
+```{r, message=F}
+
+library(sandwich)
+library(lmtest)
+
+# Robustsete standardvigade jaoks tuleb meil arvutada uus 
+#  'robustne' koefitsientide variatsiooni-kovariatsiooni maatriks ehk nn 
+#  Heteroscedasticity-Consistent Covariance Matrix. sandwitch paketis
+#  on selleks funktsioon vcovHC().
+
+
+vcovHC(mudel) %>% # arvutame 'robustse' variatsiooni-kovariatsiooni maatriks
+  diag() %>% # võtame selle diagonaali (ehk pasrameetrite dispersioonid)
+  sqrt() # ruutjuur dispersioonist annab standardhälbe, mis on ongi standardviga
+
+```
+
+
+```{r}
+# Et neid koos koefitsientide ja vastavate testidega kuvada, võime kasutada
+#  lmtest paketi funktsiooni coeftest()
+coeftest(mudel, vcov. = vcovHC(mudel))
+
+# Usalduspiirid robustsete standardvigade alusel saame kätte lmtest paketi 
+# coefci() funktsiooniga
+lmtest::coefci(mudel, vcov. = vcovHC(mudel))
+```
+
+## Clustered standard errors
+
+Klasterdatud standardvigade jaoks tuleb meil arvutada uus 'klasterdatud' koefitsientide variatsiooni-kovariatsiooni maatriks ehk nn *Clustered Covariance Matrix*. Saame kasutada `sandwitch` paketti ja selle funktsiooni `vcovCL()`.
+
+
+```{r, message=F}
+
+# Klasterdatud standardvigade arvutamiseks kasutame jälle sandwitch paketti ja
+# selle funktsiooni vcovCL()
+library(sandwich)
+library(lmtest)
+
+# Eeldame, et valim on klasterdatud haridusvaldkonna alusel
+# Defineerime regressioonimudeli 
+#  (jätame välja kõik vaatlused, kus haridusvaldkond on NA)
+mudel <- lm(numeracy ~ literacy * sugu, 
+             data = piaac[!is.na(piaac$hvaldkond),])
+
+
+# Robustsete standardvigade jaoks tuleb meil arvutada uus 
+#  'klasterdatud' koefitsientide variatsiooni-kovariatsiooni maatriks ehk nn 
+#  Clustered Covariance Matrix. sandwitch paketis
+#  on selleks funktsioon vcovCL(). Peame selles lisaks mudeliobjektile
+#  määrama ka klastritunnuse
+vcovCL(mudel, cluster = ~hvaldkond) %>% 
+  diag() %>% 
+  sqrt()
+
+```
+
+
+```{r}
+# Et neid koos koefitsientide ja vastavate testidega kuvada, võime kasutada
+#  jällegi lmtest paketi funktsiooni coeftest()
+coeftest(mudel, vcov. = vcovCL(mudel, cluster = ~hvaldkond))
+
+# Usalduspiirid robustsete standardvigade alusel saame kätte lmtest paketi 
+# coefci() funktsiooniga
+coefci(mudel, vcov. = vcovCL(mudel, cluster = ~hvaldkond))
+```
+
+
 # Delta meetod
